Why give live - mobile logo visibility fix, What we do heading fonts corrections

--- a/themes/custom/mat/sass/components/_header.scss
+++ b/themes/custom/mat/sass/components/_header.scss
@@ -376,6 +376,7 @@
 // Transparent navigation
 body.page-node-type-landing-page {
   .region-header {
+    z-index: 3;
      // Logotype
     .block.branding {
       a {
